[gd_scene load_steps=31 format=2]

[ext_resource path="res://Sprites/ManaRing/ManaUnder.png" type="Texture" id=1]
[ext_resource path="res://Sprites/BLUESQ.jpg" type="Texture" id=2]
[ext_resource path="res://Sprites/GREENSQ.jpg" type="Texture" id=3]
[ext_resource path="res://Sprites/YELLOWSQ.jpg" type="Texture" id=4]
[ext_resource path="res://Sprites/PURPLESQ.jpg" type="Texture" id=5]
[ext_resource path="res://Sprites/ORANGESQ.jpg" type="Texture" id=6]
[ext_resource path="res://Sprites/REDSQ.jpg" type="Texture" id=7]
[ext_resource path="res://Sprites/SQUARE.jpg" type="Texture" id=8]
[ext_resource path="res://Sprites/PINKSQ.jpg" type="Texture" id=9]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Spawner0.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sprites/speedline.png" type="Texture" id=12]
[ext_resource path="res://Sprites/ManaRing/ManaRing.png" type="Texture" id=13]
[ext_resource path="res://Sprites/ManaRing/ManaProgress.png" type="Texture" id=14]
[ext_resource path="res://Fonts/Mainlux-Light.otf" type="DynamicFontData" id=15]
[ext_resource path="res://Scenes/UI.gd" type="Script" id=16]
[ext_resource path="res://Sprites/UI/DeathClouds.png" type="Texture" id=17]
[ext_resource path="res://Music/Twin Musicom - Dance Dont Delay.mp3" type="AudioStream" id=18]
[ext_resource path="res://Music/Twin Musicom - Rhodesia Background.mp3" type="AudioStream" id=19]

[sub_resource type="ProceduralSky" id=11]

[sub_resource type="Environment" id=12]
background_mode = 4
background_sky = SubResource( 11 )
glow_enabled = true
glow_intensity = 0.27
glow_blend_mode = 0
adjustment_enabled = true

[sub_resource type="TileSet" id=2]
0/name = "SQUARE.jpg 0"
0/texture = ExtResource( 8 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "PINKSQ.jpg 1"
1/texture = ExtResource( 9 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "PURPLESQ.jpg 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "BLUESQ.jpg 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "GREENSQ.jpg 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "YELLOWSQ.jpg 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "ORANGESQ.jpg 6"
6/texture = ExtResource( 6 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "REDSQ.jpg 7"
7/texture = ExtResource( 7 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 200, 2500, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( -200, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
linear_accel_random = 1.0
scale = 0.8
scale_random = 1.0

[sub_resource type="Theme" id=6]

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 1
outline_color = Color( 0.796078, 0.67451, 0.211765, 1 )
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=5]
size = 50
outline_size = 1
outline_color = Color( 0.796078, 0.67451, 0.211765, 1 )
font_data = ExtResource( 15 )

[sub_resource type="Animation" id=7]
resource_name = "DeathScreen"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("DeathClouds:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1277, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("DeathClouds:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1834, -0.25, 0, 0.6, 12.3851, 700, -0.7, 28.2048, 0.9, -67.6392, -517.768, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("../WorldEnvironment:environment:adjustment_contrast")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../WorldEnvironment:environment:adjustment_enabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DethScreenBGMusic:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.9, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=10]
resource_name = "PlayerDeath"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("../SpeedLines:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "DeathScreen"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../WorldEnvironment:environment:glow_hdr_threshold")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../BGMusic:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -20.0, -70.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("DeathClouds:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1277, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("DeathClouds:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1834, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("../SpeedLines:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../WorldEnvironment:environment:glow_hdr_threshold")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../BGMusic:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -20.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../WorldEnvironment:environment:adjustment_enabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../WorldEnvironment:environment:adjustment_contrast")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("DethScreenBGMusic:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=9]
size = 200
outline_size = 3
outline_color = Color( 0.792157, 0.666667, 0.2, 1 )
font_data = ExtResource( 15 )

[node name="World" type="Node2D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 12 )

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -20.0
autoplay = true
bus = "Music"

[node name="Icon" type="Sprite" parent="."]
modulate = Color( 0.784314, 0.862745, 1, 1 )
position = Vector2( 4, -4 )
scale = Vector2( 50, 50 )
texture = ExtResource( 8 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( -524301, 7, 0, -524300, 7, 0, -524299, 7, 0, -524298, 7, 0, -524297, 7, 0, -524296, 7, 0, -524295, 7, 0, -524294, 7, 0, -524293, 7, 0, -524292, 7, 0, -524291, 7, 0, -524290, 7, 0, -524289, 7, 0, -589824, 7, 0, -589823, 7, 0, -589822, 7, 0, -589821, 7, 0, -589820, 7, 0, -589819, 7, 0, -589818, 7, 0, -589817, 7, 0, -589816, 7, 0, -589815, 7, 0, -589814, 7, 0, -589813, 7, 0, -589812, 7, 0, -458765, 7, 0, -458764, 7, 0, -458763, 7, 0, -458762, 7, 0, -458761, 7, 0, -458760, 7, 0, -458759, 7, 0, -458758, 7, 0, -458757, 7, 0, -458756, 7, 0, -458755, 7, 0, -458754, 7, 0, -458753, 7, 0, -524288, 7, 0, -524287, 7, 0, -524286, 7, 0, -524285, 7, 0, -524284, 7, 0, -524283, 7, 0, -524282, 7, 0, -524281, 7, 0, -524280, 7, 0, -524279, 7, 0, -524278, 7, 0, -524277, 7, 0, -524276, 7, 0, -393229, 6, 0, -393228, 6, 0, -393227, 6, 0, -393226, 6, 0, -393225, 6, 0, -393224, 6, 0, -393223, 6, 0, -393222, 6, 0, -393221, 6, 0, -393220, 6, 0, -393219, 6, 0, -393218, 6, 0, -393217, 6, 0, -458752, 6, 0, -458751, 6, 0, -458750, 6, 0, -458749, 6, 0, -458748, 6, 0, -458747, 6, 0, -458746, 6, 0, -458745, 6, 0, -458744, 6, 0, -458743, 6, 0, -458742, 6, 0, -458741, 6, 0, -458740, 6, 0, -327693, 6, 0, -327692, 6, 0, -327691, 6, 0, -327690, 6, 0, -327689, 6, 0, -327688, 6, 0, -327687, 6, 0, -327686, 6, 0, -327685, 6, 0, -327684, 6, 0, -327683, 6, 0, -327682, 6, 0, -327681, 6, 0, -393216, 6, 0, -393215, 6, 0, -393214, 6, 0, -393213, 6, 0, -393212, 6, 0, -393211, 6, 0, -393210, 6, 0, -393209, 6, 0, -393208, 6, 0, -393207, 6, 0, -393206, 6, 0, -393205, 6, 0, -393204, 6, 0, -262157, 5, 0, -262156, 5, 0, -262155, 5, 0, -262154, 5, 0, -262153, 5, 0, -262152, 5, 0, -262151, 5, 0, -262150, 5, 0, -262149, 5, 0, -262148, 5, 0, -262147, 5, 0, -262146, 5, 0, -262145, 5, 0, -327680, 5, 0, -327679, 5, 0, -327678, 5, 0, -327677, 5, 0, -327676, 5, 0, -327675, 5, 0, -327674, 5, 0, -327673, 5, 0, -327672, 5, 0, -327671, 5, 0, -327670, 5, 0, -327669, 5, 0, -327668, 5, 0, -196621, 5, 0, -196620, 5, 0, -196619, 5, 0, -196618, 5, 0, -196617, 5, 0, -196616, 5, 0, -196615, 5, 0, -196614, 5, 0, -196613, 5, 0, -196612, 5, 0, -196611, 5, 0, -196610, 5, 0, -196609, 5, 0, -262144, 5, 0, -262143, 5, 0, -262142, 5, 0, -262141, 5, 0, -262140, 5, 0, -262139, 5, 0, -262138, 5, 0, -262137, 5, 0, -262136, 5, 0, -262135, 5, 0, -262134, 5, 0, -262133, 5, 0, -262132, 5, 0, -131085, 4, 0, -131084, 4, 0, -131083, 4, 0, -131082, 4, 0, -131081, 4, 0, -131080, 4, 0, -131079, 4, 0, -131078, 4, 0, -131077, 4, 0, -131076, 4, 0, -131075, 4, 0, -131074, 4, 0, -131073, 4, 0, -196608, 4, 0, -196607, 4, 0, -196606, 4, 0, -196605, 4, 0, -196604, 4, 0, -196603, 4, 0, -196602, 4, 0, -196601, 4, 0, -196600, 4, 0, -196599, 4, 0, -196598, 4, 0, -196597, 4, 0, -196596, 4, 0, -65549, 4, 0, -65548, 4, 0, -65547, 4, 0, -65546, 4, 0, -65545, 4, 0, -65544, 4, 0, -65543, 4, 0, -65542, 4, 0, -65541, 4, 0, -65540, 4, 0, -65539, 4, 0, -65538, 4, 0, -65537, 4, 0, -131072, 4, 0, -131071, 4, 0, -131070, 4, 0, -131069, 4, 0, -131068, 4, 0, -131067, 4, 0, -131066, 4, 0, -131065, 4, 0, -131064, 4, 0, -131063, 4, 0, -131062, 4, 0, -131061, 4, 0, -131060, 4, 0, -13, 3, 0, -12, 3, 0, -11, 3, 0, -10, 3, 0, -9, 3, 0, -8, 3, 0, -7, 3, 0, -6, 3, 0, -5, 3, 0, -4, 3, 0, -3, 3, 0, -2, 3, 0, -1, 3, 0, -65536, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65532, 3, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 3, 0, 65523, 3, 0, 65524, 3, 0, 65525, 3, 0, 65526, 3, 0, 65527, 3, 0, 65528, 3, 0, 65529, 3, 0, 65530, 3, 0, 65531, 3, 0, 65532, 3, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 131059, 2, 0, 131060, 2, 0, 131061, 2, 0, 131062, 2, 0, 131063, 2, 0, 131064, 2, 0, 131065, 2, 0, 131066, 2, 0, 131067, 2, 0, 131068, 2, 0, 131069, 2, 0, 131070, 2, 0, 131071, 2, 0, 65536, 2, 0, 65537, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 65547, 2, 0, 65548, 2, 0, 196595, 2, 0, 196596, 2, 0, 196597, 2, 0, 196598, 2, 0, 196599, 2, 0, 196600, 2, 0, 196601, 2, 0, 196602, 2, 0, 196603, 2, 0, 196604, 2, 0, 196605, 2, 0, 196606, 2, 0, 196607, 2, 0, 131072, 2, 0, 131073, 2, 0, 131074, 2, 0, 131075, 2, 0, 131076, 2, 0, 131077, 2, 0, 131078, 2, 0, 131079, 2, 0, 131080, 2, 0, 131081, 2, 0, 131082, 2, 0, 131083, 2, 0, 131084, 2, 0, 262131, 1, 0, 262132, 1, 0, 262133, 1, 0, 262134, 1, 0, 262135, 1, 0, 262136, 1, 0, 262137, 1, 0, 262138, 1, 0, 262139, 1, 0, 262140, 1, 0, 262141, 1, 0, 262142, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 327667, 1, 0, 327668, 1, 0, 327669, 1, 0, 327670, 1, 0, 327671, 1, 0, 327672, 1, 0, 327673, 1, 0, 327674, 1, 0, 327675, 1, 0, 327676, 1, 0, 327677, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 10 )]

[node name="Spawner0" parent="." instance=ExtResource( 11 )]
position = Vector2( 840, -512 )

[node name="Spawner1" parent="." instance=ExtResource( 11 )]
position = Vector2( 838, -384 )

[node name="Spawner2" parent="." instance=ExtResource( 11 )]
position = Vector2( 838, -256 )

[node name="Spawner3" parent="." instance=ExtResource( 11 )]
position = Vector2( 838, -128 )

[node name="Spawner4" parent="." instance=ExtResource( 11 )]
position = Vector2( 838, 0 )

[node name="Spawner5" parent="." instance=ExtResource( 11 )]
position = Vector2( 838, 128 )

[node name="Spawner6" parent="." instance=ExtResource( 11 )]
position = Vector2( 838, 256 )

[node name="SpeedLines" type="Particles2D" parent="."]
position = Vector2( 760, -75 )
scale = Vector2( 1, 0.3 )
amount = 5
lifetime = 8.0
speed_scale = 7.0
process_material = SubResource( 3 )
texture = ExtResource( 12 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 16 )

[node name="ManaRingProgress" type="TextureProgress" parent="UI"]
margin_left = 1686.0
margin_top = 34.0
margin_right = 1890.0
margin_bottom = 243.0
theme = SubResource( 6 )
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 14 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaRing" type="Sprite" parent="UI/ManaRingProgress"]
position = Vector2( 103, 104 )
scale = Vector2( 0.402672, 0.406439 )
texture = ExtResource( 13 )

[node name="Mana" type="Label" parent="UI/ManaRingProgress"]
margin_left = 40.0
margin_top = 60.0
margin_right = 194.0
margin_bottom = 120.0
custom_colors/font_color = Color( 0.176471, 0.611765, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "Mana"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaCount" type="Label" parent="UI/ManaRingProgress"]
margin_left = 30.0
margin_top = 104.0
margin_right = 184.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0.176471, 0.611765, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "100%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathClouds" type="Sprite" parent="UI"]
position = Vector2( 1277, 1834 )
scale = Vector2( 1.168, 1.168 )
texture = ExtResource( 17 )
offset = Vector2( -201.199, -117.295 )

[node name="DeathClouds2" type="Sprite" parent="UI/DeathClouds"]
position = Vector2( -20.5479, -238.014 )
rotation = 3.12618
texture = ExtResource( 17 )
offset = Vector2( -201.199, -117.295 )

[node name="DeathClouds3" type="Sprite" parent="UI/DeathClouds"]
position = Vector2( -695.206, -309.075 )
rotation = -1.49629
texture = ExtResource( 17 )
offset = Vector2( -201.199, -117.295 )

[node name="DeathScreen" type="AnimationPlayer" parent="UI"]
anims/DeathScreen = SubResource( 7 )
anims/PlayerDeath = SubResource( 10 )
anims/RESET = SubResource( 8 )

[node name="Time" type="Label" parent="UI"]
margin_left = 29.0
margin_top = 32.0
margin_right = 267.0
margin_bottom = 232.0
custom_colors/font_color = Color( 0.176471, 0.611765, 1, 1 )
custom_fonts/font = SubResource( 9 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DethScreenBGMusic" type="AudioStreamPlayer" parent="UI"]
stream = ExtResource( 19 )
volume_db = -20.0
bus = "Music"
